fix layout problems showing overflow-x scrollbars.

--- a/web/assets/theme/scss/_landing_portfolio.scss
+++ b/web/assets/theme/scss/_landing_portfolio.scss
@@ -3,6 +3,12 @@
 .portfolio-project {
   //@include row;
   @extend .columns;
+  @extend .is-gapless;
+
+  &:not(:last-child) {
+    margin-bottom: 0;
+  }
+
   &.even {
     flex-direction: row-reverse;
   }
